# tenewto-server

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: helpers.py  urls.py  utils.py  websockets.py
api/chat/: admin.py  apps.py  consumers.py  models.py  paginations.py  serializers.py  urls.py  views.py
api/chat/migrations/: 0001_initial.py
api/logger/: admin.py
api/matching/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/matching/migrations/: 0001_initial.py  0002_alter_like_options_alter_match_options.py  0003_block.py
api/notification/: admin.py  fcm.py  urls.py  views.py
api/payment/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  verify.py  views.py
api/recommendation/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/user/: admin.py  models.py  serializers.py  urls.py  views.py
board/: admin.py  forms.py  models.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_alter_application_art_name_and_more.py  0003_applyavailable_alter_application_options_and_more.py  0004_rename_art_name_application_art_name1_and_more.py  0005_application_application.py  0006_board.py  0007_alter_board_file_upload.py  0008_alter_board_writer.py  0009_remove_application_explanation_and_more.py  0010_alter_application_art_name1_and_more.py  0011_alter_board_writer.py
config/: asgi.py  routing.py  settings.py  urls.py
nginx/: default.conf
templates/: apply.html  apply_init.html  base.html  board_detail.html  board_list.html  home.html  info-img.html  info.html  success.html
(+15 files in other folders)
